--- a/src/components/audio-component/styles.scss
+++ b/src/components/audio-component/styles.scss
@@ -1,6 +1,6 @@
-$rhap_theme-color: #868686 !default;
-$rhap_background-color: #fff !default;
-$rhap_bar-color: #dddddd !default;
+$rhap_theme-color: #008966 !default;
+$rhap_background-color: transparent !default;
+$rhap_bar-color: #d3d3d3 !default;
 $rhap_time-color: #333 !default;
 $rhap_font-family: inherit !default;
 
@@ -11,12 +11,13 @@ $rhap_font-family: inherit !default;
   line-height: 1;
   font-family: $rhap_font-family;
   width: 100%;
-  padding: 10px 15px;
+  padding: 0;
   background-color: $rhap_background-color;
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+  // box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
 
   &:focus:not(:focus-visible) {
-    outline: 0;
+    outline: none;
+    // outline: 0;
   }
 
   svg {
@@ -24,13 +25,13 @@ $rhap_font-family: inherit !default;
   }
 }
 
-.rhap_header {
-  margin-bottom: 10px;
-}
+// .rhap_header {
+//   margin-bottom: 10px;
+// }
 
-.rhap_footer {
-  margin-top: 5px;
-}
+// .rhap_footer {
+//   margin-top: 5px;
+// }
 
 .rhap_main {
   display: flex;
@@ -38,40 +39,44 @@ $rhap_font-family: inherit !default;
   flex: 1 1 auto;
 }
 
-.rhap_stacked {
-  .rhap_controls-section {
-    margin-top: 8px;
-  }
-}
+// .rhap_stacked {
+//   .rhap_controls-section {
+//     margin-top: 1rem;
+//   }
+// }
 
-.rhap_horizontal {
-  flex-direction: row;
+// .rhap_horizontal {
+//   flex-direction: row;
 
-  .rhap_controls-section {
-    margin-left: 8px;
-  }
-}
+//   .rhap_controls-section {
+//     margin-left: 1rem;
+//   }
+// }
 
 .rhap_horizontal-reverse {
   flex-direction: row-reverse;
 
   .rhap_controls-section {
-    margin-right: 8px;
+    margin-right: 1rem;
   }
 }
 
-.rhap_stacked-reverse {
-  flex-direction: column-reverse;
+// .rhap_stacked-reverse {
+//   flex-direction: column-reverse;
 
-  .rhap_controls-section {
-    margin-bottom: 8px;
-  }
-}
+//   .rhap_controls-section {
+//     margin-bottom: 1rem;
+//   }
+// }
 
 .rhap_progress-section {
+  position: relative;
+
   display: flex;
   flex: 3 1 auto;
   align-items: center;
+
+  margin-left: 1.5rem;
 }
 
 .rhap_progress-container {
@@ -80,20 +85,32 @@ $rhap_font-family: inherit !default;
   height: 20px;
   flex: 1 0 auto;
   align-self: center;
-  margin: 0 calc(10px + 1%);
+  // margin: 0 calc(10px + 1%);
   cursor: pointer;
-  -webkit-user-select: none; 
+  -webkit-user-select: none;
 
   &:focus:not(:focus-visible) {
-    outline: 0;
+    // outline: 0;
+    outline: none;
   }
 }
 
 .rhap_time {
-  color: $rhap_time-color;
-  font-size: 16px;
+  position: absolute;
+  bottom: 0;
+
+  color: rgba($rhap_bar-color, 0.5);
+  font-size: 11px;
   user-select: none;
-  -webkit-user-select: none; 
+  -webkit-user-select: none;
+}
+
+.rhap_current-time {
+  left: 0;
+}
+
+.rhap_total-time {
+  right: 0;
 }
 
 .rhap_progress-bar {
@@ -110,7 +127,7 @@ $rhap_font-family: inherit !default;
   height: 100%;
   position: absolute;
   z-index: 2;
-  background-color: $rhap_theme-color;
+  background: linear-gradient(to right, rgb(0, 188, 140) 0%, rgb(61, 133, 140) 100%);
   border-radius: 2px;
 }
 
@@ -129,36 +146,41 @@ $rhap_font-family: inherit !default;
 .rhap_progress-indicator {
   box-sizing: border-box;
   position: absolute;
+  top: -6px;
   z-index: 3;
-  width: 20px;
-  height: 20px;
+
+  width: 1.6rem;
+  height: 1.6rem;
   margin-left: -10px;
-  top: -8px;
-  background: $rhap_theme-color;
-  border-radius: 50px;
-  box-shadow: rgba($rhap_theme-color, .5) 0 0 5px;
+  background: $rhap_bar-color;
+  border-radius: 50%;
+  box-shadow: rgba($rhap_bar-color, .5) 0 0 5px;
+
+  &:hover {
+    opacity: .75;
+  }
 }
 
 .rhap_controls-section {
   display: flex;
-  flex: 1 1 auto;
+  // flex: 1 1 auto;
   justify-content: space-between;
   align-items: center;
 }
 
-.rhap_additional-controls {
-  display: flex;
-  flex: 1 0 auto;
-  align-items: center;
-}
+// .rhap_additional-controls {
+//   display: flex;
+//   flex: 1 0 auto;
+//   align-items: center;
+// }
 
-.rhap_repeat-button {
-  font-size: 26px;
-  width: 26px;
-  height: 26px;
-  color: $rhap_theme-color;
-  margin-right: 6px;
-}
+// .rhap_repeat-button {
+//   font-size: 26px;
+//   width: 26px;
+//   height: 26px;
+//   color: $rhap_theme-color;
+//   margin-right: 6px;
+// }
 
 .rhap_main-controls {
   flex: 0 1 auto;
@@ -168,7 +190,8 @@ $rhap_font-family: inherit !default;
 }
 
 .rhap_main-controls-button {
-  margin: 0 3px;
+  // margin: 0 3px;
+  margin: 0;
   color: $rhap_theme-color;
   font-size: 35px;
   width: 35px;
@@ -179,14 +202,15 @@ $rhap_font-family: inherit !default;
   font-size: 40px;
   width: 40px;
   height: 40px;
-  
 }
 
 .rhap_volume-controls {
   display: flex;
-  flex: 1 0 auto;
+  // flex: 1 0 auto;
   justify-content: flex-end;
   align-items: center;
+
+  width: 8.5rem;
 }
 
 .rhap_volume-button {
@@ -201,8 +225,8 @@ $rhap_font-family: inherit !default;
 .rhap_volume-container {
   display: flex;
   align-items: center;
-  flex: 0 1 100px;
-  -webkit-user-select: none; 
+  flex: 0 1 8.5rem;
+  -webkit-user-select: none;
 }
 
 .rhap_volume-bar-area {
@@ -213,7 +237,8 @@ $rhap_font-family: inherit !default;
   cursor: pointer;
 
   &:focus:not(:focus-visible) {
-    outline: 0;
+    // outline: 0;
+    outline: none;
   }
 }
 
@@ -234,14 +259,14 @@ $rhap_font-family: inherit !default;
   margin-left: -6px;
   left: 0;
   top: -4px;
-  background: $rhap_theme-color;
+  background: $rhap_bar-color;
   opacity: 0.9;
   border-radius: 50px;
-  box-shadow: rgba($rhap_theme-color, .5) 0 0 3px;
+  box-shadow: rgba($rhap_bar-color, .5) 0 0 3px;
   cursor: pointer;
 
   &:hover {
-    opacity: .9;
+    opacity: .75;
   }
 }
 
@@ -254,7 +279,7 @@ $rhap_font-family: inherit !default;
   cursor: pointer;
 
   &:hover {
-    opacity: .9;
+    opacity: .75;
     transition-duration: .2s;
   }
 
@@ -263,6 +288,7 @@ $rhap_font-family: inherit !default;
   }
 
   &:focus:not(:focus-visible) {
-    outline: 0;
+    // outline: 0;
+    outline: none;
   }
 }
